feat: add benchmark root page
Signed-off-by: Ziwen Ning <ningziwe@amazon.com>

--- a/dev/bench/macOS/13/x86_64/index.html
+++ b/dev/bench/macOS/13/x86_64/index.html
@@ -110,7 +110,7 @@
     <script id="main-script">
       'use strict';
       (function() {
-        renderAllChars(init()); // Start
+        renderAllChars(init(), 'macOS - 13 - x86_64'); // Start
       })();
     </script>
   </body>
