--- a/dev/bench/macOS/12/arm64/index.html
+++ b/dev/bench/macOS/12/arm64/index.html
@@ -110,7 +110,7 @@
     <script id="main-script">
       'use strict';
       (function() {
-        renderAllChars(init()); // Start
+        renderAllChars(init(), 'macOS - 12 - arm64'); // Start
       })();
     </script>
   </body>
